--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 	  </div>
 	</div>
   </nav><!-- END nav -->
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/shutterstock_748167730.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/shutterstock_1824785282.jpg" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-end">
@@ -159,7 +159,7 @@
 									</div>
 								</div>
 								<div class="col-md-5 d-flex align-items-stretch">
-									<div class="info-wrap w-100 p-5 img" style="background-image: url(images/shutterstock_409903594\ \(1\).jpg);">
+									<div class="info-wrap w-100 p-5 img" style="background-image: url(images/shutterstock_409903594\ \(1\).jpg');">
 				          </div>
 								</div>
 							</div>
