--- a/about.html
+++ b/about.html
@@ -49,14 +49,14 @@
 			<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 			<li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
 			<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-		  <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+		  <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 		  <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 		</ul>
 	  </div>
 	</div>
   </nav>
     <!-- END nav -->
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/shutterstock_1739272520.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/IMG_6386.jpeg" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-end">
@@ -67,79 +67,19 @@
         </div>
       </div>
     </section>
+	<br>
+	<br>
+	<img src="images/about us 2.png" alt="" class="img-fluid">
+            </p>
+            <h2 class="mb-3">We are Swoosh</h2>
+            <p>Swoosh Cleaning Services is poised towards expressing excellence  thorough cleaning. 
 
-   
-    <section class="ftco-section">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 col-lg-3 pr-md-4 pb-lg-0 pb-4">
-						<div class="heading-section ftco-animate text-center text-lg-left">
-	          	<span class="subheading">Team &amp; Staff</span>
-	            <h2>Our Team</h2>
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
-	            <p><a href="#" class="btn btn-secondary">View All Staff</a></p>
-	          </div>
-					</div>
-					<div class="col-md-4 col-lg-3 ftco-animate d-flex">
-						<div class="staff">
-							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/WhatsApp\ Image\ 2021-06-01\ at\ 16.50.40.jpeg);"></div>
-							</div>
-							<div class="text pt-3 px-3 pb-4 text-center">
-								<h3>Steve Oladipo</h3>
-								<span class="position mb-2">Office Cleaner</span>
-								<div class="faded">
-									<ul class="ftco-social text-center">
-		                <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
-		                <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
-		                <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a></li>
-		                <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"></span></a></li>
-		              </ul>
-	              </div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-lg-3 ftco-animate d-flex">
-						<div class="staff">
-							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/WhatsApp\ Image\ 2021-05-27\ at\ 12.00.10\ PM.jpeg);"></div>
-							</div>
-							<div class="text pt-3 px-3 pb-4 text-center">
-								<h3>Onome Bankole</h3>
-								<span class="position mb-2">Fumigator</span>
-								<div class="faded">
-									<ul class="ftco-social text-center">
-		                <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
-		                <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
-		                <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a></li>
-		                <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"></span></a></li>
-		              </ul>
-	              </div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-lg-3 ftco-animate d-flex">
-						<div class="staff">
-							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/WhatsApp\ Image\ 2021-05-27\ at\ 11.52.59\ AM.jpeg);"></div>
-							</div>
-							<div class="text pt-3 px-3 pb-4 text-center">
-								<h3>Wisdom Ejembi</h3>
-								<span class="position mb-2">Supervisor</span>
-								<div class="faded">
-									<ul class="ftco-social text-center">
-		                <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
-		                <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
-		                <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a></li>
-		                <li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"></span></a></li>
-		              </ul>
-	              </div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+				We are passionate about providing a conducive and  clean environment that promotes healthy living and quality lifestyle.
+				
+				When it comes to detail, our staff have been trained to be detail oriented and trustworthy. 
+				
+				Our core values are excellence and perfection, and this has tailored our mindset on how we work.</p>
+				<br>
 
 		<section class="ftco-section testimony-section ftco-bg-dark">
 			<div class="container">
@@ -233,7 +173,7 @@
 			</div>
 		  </section>
 
-    <section class="ftco-section ftco-intro" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
+    <section class="ftco-section ftco-intro" style="background-image: url('images/IMG_6386.jpeg');" data-stellar-background-ratio="0.5">
     	<div class="overlay"></div>
     	<div class="container">
     		<div class="row justify-content-center">
@@ -260,9 +200,9 @@
 				<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
 					<h2 class="footer-heading">Latest News</h2>
 					<div class="block-21 mb-4 d-flex">
-		  <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
+		  <a class="img mr-4 rounded" style="background-image: url(images/IMG_8617.jpeg);"></a>
 		  <div class="text">
-			<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+			<h3 class="heading"><a href="#">How to clean your house</a></h3>
 			<div class="meta">
 			  <div><a href="#"><span class="icon-calendar"></span> Mar. 04, 2020</a></div>
 			  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
@@ -271,9 +211,9 @@
 		  </div>
 		</div>
 		<div class="block-21 mb-4 d-flex">
-		  <a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
+		  <a class="img mr-4 rounded" style="background-image: url(images/IMG_8615.jpeg);"></a>
 		  <div class="text">
-			<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+			<h3 class="heading"><a href="#">5 ways to protect your couch</a></h3>
 			<div class="meta">
 			  <div><a href="#"><span class="icon-calendar"></span> Mar. 04, 2020</a></div>
 			  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
@@ -289,7 +229,7 @@
 		  <li><a href="#" class="py-1 d-block">About</a></li>
 		  <li><a href="#" class="py-1 d-block">Services</a></li>
 		  <li><a href="#" class="py-1 d-block">Works</a></li>
-		  <li><a href="#" class="py-1 d-block">Blog</a></li>
+		  <li><a href="#" class="py-1 d-block">Gallery</a></li>
 		  <li><a href="#" class="py-1 d-block">Contact</a></li>
 		</ul>
 				</div>
@@ -297,7 +237,7 @@
 					<h2 class="footer-heading">Have a Questions?</h2>
 					<div class="block-23 mb-3">
 		  <ul>
-			<li><span class="icon fa fa-map-marker"></span><span class="text">Ikate Lagos</span></li>
+			<li><span class="icon fa fa-map-marker"></span><span class="text">Lekki gardens horizon 2 extension estate, Ikate Lekki</span></li>
 			<li><a href="+234 702500 4764"><span class="icon fa fa-phone"></span><span class="text">+234 702500 4764</span></a></li>
 			<li><a href="swooshnigeria@gmail.com"><span class="icon fa fa-paper-plane"></span><span class="text">swooshnigeria@gmail.com</span></a></li>
 		  </ul>
