--- a/contact.html
+++ b/contact.html
@@ -49,13 +49,13 @@
 			<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 			<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 			<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-		  <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+		  <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 		  <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 		</ul>
 	  </div>
 	</div>
   </nav><!-- END nav -->
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/shutterstock_1824785282.jpg" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/IMG_6368.jpeg" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-end">
@@ -79,7 +79,7 @@
 				        			<span class="fa fa-map-marker"></span>
 				        		</div>
 				        		<div class="text">
-					            <p><span>Address:</span> Ikate, Lagos</p>
+					            <p><span>Address:</span> Lekki gardens horizon 2 extension estate, Ikate Lekki</p>
 					          </div>
 				          </div>
 								</div>
@@ -159,7 +159,7 @@
 									</div>
 								</div>
 								<div class="col-md-5 d-flex align-items-stretch">
-									<div class="info-wrap w-100 p-5 img" style="background-image: url(images/shutterstock_409903594\ \(1\).jpg');">
+									<div class="info-wrap w-100 p-5 img" style="background-image: url(images/shutterstock_409903594\ \(1\).jpg);">
 				          </div>
 								</div>
 							</div>
@@ -203,31 +203,31 @@
 		  <li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
 		  <li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
 		</ul>
-				</div>
-				<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-					<h2 class="footer-heading">Latest News</h2>
-					<div class="block-21 mb-4 d-flex">
-		  <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
-		  <div class="text">
-			<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-			<div class="meta">
-			  <div><a href="#"><span class="icon-calendar"></span> Mar. 04, 2020</a></div>
-			  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-			  <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-			</div>
-		  </div>
-		</div>
+	</div>
+	<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+		<h2 class="footer-heading">Latest News</h2>
 		<div class="block-21 mb-4 d-flex">
-		  <a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
-		  <div class="text">
-			<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-			<div class="meta">
-			  <div><a href="#"><span class="icon-calendar"></span> Mar. 04, 2020</a></div>
-			  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-			  <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-			</div>
-		  </div>
-		</div>
+<a class="img mr-4 rounded" style="background-image: url(images/IMG_8617.jpeg);"></a>
+<div class="text">
+<h3 class="heading"><a href="#">How to clean your house</a></h3>
+<div class="meta">
+  <div><a href="#"><span class="icon-calendar"></span> Mar. 04, 2020</a></div>
+  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
+  <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+</div>
+</div>
+</div>
+<div class="block-21 mb-4 d-flex">
+<a class="img mr-4 rounded" style="background-image: url(images/IMG_8615.jpeg);"></a>
+<div class="text">
+<h3 class="heading"><a href="#">5 ways to protect your couch</a></h3>
+<div class="meta">
+  <div><a href="#"><span class="icon-calendar"></span> Mar. 04, 2020</a></div>
+  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
+  <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+</div>
+</div>
+</div>
 				</div>
 				<div class="col-md-6 col-lg-3 pl-lg-5 mb-4 mb-md-0">
 					<h2 class="footer-heading">Quick Links</h2>
@@ -244,7 +244,7 @@
 					<h2 class="footer-heading">Have a Questions?</h2>
 					<div class="block-23 mb-3">
 		  <ul>
-			<li><span class="icon fa fa-map-marker"></span><span class="text">Ikate Lagos</span></li>
+			<li><span class="icon fa fa-map-marker"></span><span class="text">Lekki gardens horizon 2 extension estate, Ikate Lekki</span></li>
 			<li><a href="+234 702500 4764"><span class="icon fa fa-phone"></span><span class="text">+234 702500 4764</span></a></li>
 			<li><a href="swooshnigeria@gmail.com"><span class="icon fa fa-paper-plane"></span><span class="text">swooshnigeria@gmail.com</span></a></li>
 		  </ul>
