--- a/index.html
+++ b/index.html
@@ -49,78 +49,27 @@
 	        	<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	        	<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+	          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
 	    </div>
 	  </nav>
     <!-- END nav -->
-    <div class="hero-wrap js-fullheight" style="background-image: url('images/shutterstock_420064036.jpg');" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap hero-wrap-2" style="background-image: url('images/IMG_8617.jpeg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true">
           <div class="col-md-6 ftco-animate">
           	<h2 class="subheading">Leave the cleaning chores to us</h2>
           	<h1 class="mb-4">Let us do the dirty work, so you don't have to.</h1>
-            <p><a href="#" class="btn btn-primary mr-md-4 py-2 px-4">Book a session <span class="ion-ios-arrow-forward"></span></a></p>
+            <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSc9n4M5S_75bY_4Oxk34jcfD7pZjqIfWU3V_nNljW4yeZVAvQ/viewform?usp=sf_link" class="btn btn-primary mr-md-4 py-2 px-4">Book a session<span class="ion-ios-arrow-forward"></span></a></p>
           </div>
         </div>
       </div>
     </div>
 
-	  <section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb">
-			<div class="overlay"></div>
-    	<div class="container">
-    		<div class="row d-md-flex justify-content-center">
-    			<div class="col-md-12">
-	    			<div class="wrap-appointment bg-white d-md-flex pl-md-4 pb-5 pb-md-0">
-	    				<form action="#" class="appointment w-100">
-	    					<div class="row justify-content-center">
-									<div class="col-12 col-md d-flex align-items-center pt-4 pt-md-0">
-										<div class="form-group py-md-4 py-2 px-4 px-md-0">
-											<label for="name">Name</label>
-				              <input type="text" class="form-control" placeholder="Your Name">
-				            </div>
-									</div>
-									<div class="col-12 col-md d-flex align-items-center">
-										<div class="form-group py-md-4 py-2 px-4 px-md-0">
-											<label for="name">Phone number</label>
-				              <input type="text" class="form-control" placeholder="Phone number">
-				            </div>
-									</div>
-									<div class="col-12 col-md d-flex align-items-center">
-										<div class="form-group py-md-4 py-2 px-4 px-md-0">
-											<label for="name">Select Services</label>
-				    					<div class="form-field">
-		          					<div class="select-wrap">
-		                      <div class="icon"><span class="fa fa-chevron-down"></span></div>
-		                      <select name="" id="" class="form-control">
-		                      	<option value="">Select Services</option>
-		                        <option value="">Upholstery cleaning</option>
-		                        <option value="">Cleaning of rugs and mattresses</option>
-		                        <option value="">Domestic and commercial deep cleaning</option>
-		                        <option value="">Post-construction cleaning</option>
-		                        <option value="">Pre-tenancy and post-revamp cleaning </option>
-		                        <option value="">Fumigation</option>
-		                      </select>
-		                    </div>
-				              </div>
-				    				</div>
-									</div>
-										<div class="col-12 col-md d-flex align-items-center align-items-stretch">
-										<div class="form-group py-md-4 py-2 px-4 px-md-0 d-flex align-items-stretch bg-primary">
-				              <input type="submit" value="Get a Quote" class="btn btn-primary py-3 px-4">
-				            </div>
-									</div>
-	    					</div>
-		          </form>
-		    		</div>
-		    	</div>
-    		</div>
-    	</div>
-    </section>
-
+	  
     <section class="ftco-section ftco-no-pt ftco-no-pb">
     	<div class="container">
     		<div class="row d-flex no-gutters">
@@ -132,13 +81,8 @@
 			              <div class="opening-hours">
 			              	<h4>Opening Days:</h4>
 			              	<p class="pl-3">
-			              		<span><strong>Monday – Friday:</strong> 8am to 5pm</span>
-			              		<span><strong>Saturday :</strong> 9am to 4pm</span>
-			              	</p>
-			              	<h4>Vacations:</h4>
-			              	<p class="pl-3">
-			              		<span>All Sunday Days</span>
-			              		<span>All Official Holidays</span>
+			              		<span><strong>Monday – Saturday:</strong> 8am to 5pm</span>
+			              	
 			              	</p>
 			              </div>
 		    				</div>
@@ -205,14 +149,50 @@
           <div class="col-md-6 col-lg-4 services ftco-animate">
             <div class="d-block d-flex">
               <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-sprayer"></span>
+            		<span class="flaticon-tap"></span>
               </div>
               <div class="media-body pl-3">
-                <h3 class="heading">Fumigation</h3>
-                <p>Get rid of pests and bugs. Our Fumigation processs is thorough and safe.</p>
+                <h3 class="heading">Fabric and leather upholstery cleaning</h3>
+                <p>When cleaning, we use the best equiptment and chemicals and ensure your leather and fabric is left in a better condition.</p>
                 <p><a href="#" class="btn-custom">View Portfolio</a></p>
               </div>
             </div>
+          </div>
+		  <div class="col-md-6 col-lg-4 services ftco-animate">
+			<div class="d-block d-flex">
+			<div class="icon d-flex justify-content-center align-items-center">
+				  <span class="flaticon-rug"></span>
+			</div>
+			<div class="media-body pl-3">
+			  <h3 class="heading">Rugs and carpet cleaning</h3>
+			  <p>Clean rugs and carpets are another way to say welcome to your space. We will ensure that your welcome is clean.</p>
+			  <p><a href="#" class="btn-custom">View Portfolio</a></p>
+			</div>
+		  </div>
+		</div>
+		<div class="col-md-6 col-lg-4 services ftco-animate">
+            <div class="d-block d-flex">
+              <div class="icon d-flex justify-content-center align-items-center">
+            		<span class="flaticon-cleaning"></span>
+              </div>
+              <div class="media-body pl-3">
+                <h3 class="heading">Mattress and bed frame cleaning</h3>
+                <p>Sleep is important and thats why we take utmost care in caring for your bed frames and mattresses.</p>
+                <p><a href="#" class="btn-custom">View Portfolio</a></p>
+              </div>
+            </div>
+          </div>
+		  <div class="col-md-6 col-lg-4 services ftco-animate">
+            <div class="d-block d-flex">
+              <div class="icon d-flex justify-content-center align-items-center">
+            		<span class="flaticon-balcony"></span>
+              </div>
+              <div class="media-body pl-3">
+                <h3 class="heading">Post-construction and Pre-tenancy cleaning</h3>
+                <p>Post Post-construction and Pre Pre-tenancy cleaning can be a hassle but not for us. We got you covered.</p>
+                <p><a href="#" class="btn-custom">View portfolio</a></p>
+              </div>
+            </div> 
           </div>
           <div class="col-md-6 col-lg-4 services ftco-animate">
           	<div class="d-block d-flex">
@@ -226,55 +206,19 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4 services ftco-animate">
-            <div class="d-block d-flex">
-              <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-balcony"></span>
-              </div>
-              <div class="media-body pl-3">
-                <h3 class="heading">Post-construction and Pre-tenancy cleaning</h3>
-                <p>Post Post-construction and Pre Pre-tenancy cleaning can be a hassle but not for us. We got you covered.</p>
-                <p><a href="#" class="btn-custom">View portfolio</a></p>
-              </div>
-            </div> 
-          </div>
+          
 
           <div class="col-md-6 col-lg-4 services ftco-animate">
           	<div class="d-block d-flex">
               <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-tap"></span>
+            		<span class="flaticon-sprayer"></span>
               </div>
               <div class="media-body pl-3">
-                <h3 class="heading">Fabric and leather upholstery cleaning</h3>
-                <p>When cleaning, we use the best equiptment and chemicals and ensure your leather and fabric is left in a better condition.</p>
+                <h3 class="heading">Fumigation</h3>
+                <p>Get rid of pests and bugs. Our Fumigation processs is thorough and safe.</p>
                 <p><a href="#" class="btn-custom">View Portfolio</a></p>
               </div>
             </div> 
-          </div>
-
-          <div class="col-md-6 col-lg-4 services ftco-animate">
-            <div class="d-block d-flex">
-              <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-cleaning"></span>
-              </div>
-              <div class="media-body pl-3">
-                <h3 class="heading">Mattress and bed frame cleaning</h3>
-                <p>Sleep is important and thats why we take utmost care in caring for your bed frames and mattresses.</p>
-                <p><a href="#" class="btn-custom">View Portfolio</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 services ftco-animate">
-          	<div class="d-block d-flex">
-              <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-rug"></span>
-              </div>
-              <div class="media-body pl-3">
-                <h3 class="heading">Rugs and carpet cleaning</h3>
-                <p>Clean rugs and carpets are another way to say welcome to your space. We will ensure that your welcome is clean.</p>
-                <p><a href="#" class="btn-custom">View Portfolio</a></p>
-              </div>
-            </div>
           </div>
         </div>
     	</div>
@@ -371,7 +315,116 @@
         </div>
       </div>
     </section>
-		
+	<section class="ftco-section ftco-no-pb">
+		<div class="container">
+			<div class="row justify-content-center pb-5 mb-3">
+	  <div class="col-md-12 heading-section  text-center ftco-animate">
+		  <span class="subheading">Our Clients</span>
+		<h2>Here are some companies we have worked with</h2>
+	  </div>
+	</div>
+			<div class="row">
+	  <div class="col-md-6 col-lg-3 ftco-animate">
+		<div class="work img d-flex align-items-center" style="background-image: url(images/z1.png);">
+			<a href="images/z1.png" class="icon image-popup d-flex justify-content-center align-items-center">
+						<span class="fa fa-expand"></span>
+					</a>
+			<div class="desc w-100 px-4 text-center pt-5 mt-5">
+			  <div class="text w-100 mb-3 mt-4">
+				  <h2><a href="Patricia.com">Patricia.com</a></h2>
+			  </div>
+		  </div>
+		</div>
+	  </div>
+	  <div class="col-md-6 col-lg-3 ftco-animate">
+		<div class="work img d-flex align-items-center" style="background-image: url(images/z2.png);">
+			<a href="images/z2.png" class="icon image-popup d-flex justify-content-center align-items-center">
+						<span class="fa fa-expand"></span>
+					</a>
+			<div class="desc w-100 px-4 text-center pt-5 mt-5">
+			  <div class="text w-100 mb-3 mt-4">
+				  <h2><a href="Chocolate city">Chocolate City</a></h2>
+			  </div>
+		  </div>
+		</div>
+	  </div>
+	  <div class="col-md-6 col-lg-3 ftco-animate">
+		<div class="work img d-flex align-items-center" style="background-image: url(images/z3.png);">
+			<a href="images/z3.png" class="icon image-popup d-flex justify-content-center align-items-center">
+						<span class="fa fa-expand"></span>
+					</a>
+			<div class="desc w-100 px-4 text-center pt-5 mt-5">
+			  <div class="text w-100 mb-3 mt-4">
+				  <h2><a href="Mixta Africa">Mixta Africa</a></h2>
+			  </div>
+		  </div>
+		</div>
+	  </div>
+	  <div class="col-md-6 col-lg-3 ftco-animate">
+		<div class="work img d-flex align-items-center" style="background-image: url(images/z4.png);">
+			<a href="images/z4.png" class="icon image-popup d-flex justify-content-center align-items-center">
+						<span class="fa fa-expand"></span>
+					</a>
+			<div class="desc w-100 px-4 text-center pt-5 mt-5">
+			  <div class="text w-100 mb-3 mt-4">
+				  <h2><a href="Sigma">Sigma</a></h2>
+			  </div>
+		  </div>
+		</div>
+	  </div>
+
+	  <div class="col-md-6 col-lg-3 ftco-animate">
+		<div class="work img d-flex align-items-center" style="background-image: url(images/z5.png);">
+			<a href="images/z5.png" class="icon image-popup d-flex justify-content-center align-items-center">
+						<span class="fa fa-expand"></span>
+					</a>
+			<div class="desc w-100 px-4 text-center pt-5 mt-5">
+			  <div class="text w-100 mb-3 mt-4">
+				  <h2><a href="winelab">Wine Lab</a></h2>
+			  </div>
+		  </div>
+		</div>
+	  </div>
+	  <div class="col-md-6 col-lg-3 ftco-animate">
+		<div class="work img d-flex align-items-center" style="background-image: url(images/z6.png);">
+			<a href="images/z6.png" class="icon image-popup d-flex justify-content-center align-items-center">
+						<span class="fa fa-expand"></span>
+					</a>
+			<div class="desc w-100 px-4 text-center pt-5 mt-5">
+			  <div class="text w-100 mb-3 mt-4">
+				  <h2><a href="Luxeria">Luxeria</a></h2>
+			  </div>
+		  </div>
+		</div>
+	  </div>
+	  <div class="col-md-6 col-lg-3 ftco-animate">
+		<div class="work img d-flex align-items-center" style="background-image: url(images/z7.png);">
+			<a href="images/z7.png" class="icon image-popup d-flex justify-content-center align-items-center">
+						<span class="fa fa-expand"></span>
+					</a>
+			<div class="desc w-100 px-4 text-center pt-5 mt-5">
+			  <div class="text w-100 mb-3 mt-4">
+				  <h2><a href="Casper & Gambini">Casper & Gambini</a></h2>
+			  </div>
+		  </div>
+		</div>
+	  </div>
+	  <div class="col-md-6 col-lg-3 ftco-animate">
+		<div class="work img d-flex align-items-center" style="background-image: url(images/z8.png);">
+			<a href="images/z8.png" class="icon image-popup d-flex justify-content-center align-items-center">
+						<span class="fa fa-expand"></span>
+					</a>
+			<div class="desc w-100 px-4 text-center pt-5 mt-5">
+			  <div class="text w-100 mb-3 mt-4">
+				  <h2><a href="The View">The View</a></h2>
+			  </div>
+		  </div>
+		</div>
+	  </div>
+	</div>
+		</div>
+	</section>	
+	
 		
 		
 		
@@ -399,31 +452,31 @@
               <li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
               <li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
             </ul>
-					</div>
-					<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-						<h2 class="footer-heading">Latest News</h2>
-						<div class="block-21 mb-4 d-flex">
-              <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
-              <div class="text">
-                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                <div class="meta">
-                  <div><a href="#"><span class="icon-calendar"></span> Mar. 04, 2020</a></div>
-                  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                  <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                </div>
-              </div>
-            </div>
-            <div class="block-21 mb-4 d-flex">
-              <a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
-              <div class="text">
-                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                <div class="meta">
-                  <div><a href="#"><span class="icon-calendar"></span> Mar. 04, 2020</a></div>
-                  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                  <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                </div>
-              </div>
-            </div>
+		</div>
+		<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+			<h2 class="footer-heading">Latest News</h2>
+			<div class="block-21 mb-4 d-flex">
+  <a class="img mr-4 rounded" style="background-image: url(images/IMG_8617.jpeg);"></a>
+  <div class="text">
+	<h3 class="heading"><a href="#">How to clean your house</a></h3>
+	<div class="meta">
+	  <div><a href="#"><span class="icon-calendar"></span> Mar. 04, 2020</a></div>
+	  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
+	  <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+	</div>
+  </div>
+</div>
+<div class="block-21 mb-4 d-flex">
+  <a class="img mr-4 rounded" style="background-image: url(images/IMG_8615.jpeg);"></a>
+  <div class="text">
+	<h3 class="heading"><a href="#">5 ways to protect your couch</a></h3>
+	<div class="meta">
+	  <div><a href="#"><span class="icon-calendar"></span> Mar. 04, 2020</a></div>
+	  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
+	  <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+	</div>
+  </div>
+</div>
 					</div>
 					<div class="col-md-6 col-lg-3 pl-lg-5 mb-4 mb-md-0">
 						<h2 class="footer-heading">Quick Links</h2>
@@ -440,7 +493,7 @@
 						<h2 class="footer-heading">Have a Questions?</h2>
 						<div class="block-23 mb-3">
               <ul>
-                <li><span class="icon fa fa-map-marker"></span><span class="text">Ikate Lagos</span></li>
+                <li><span class="icon fa fa-map-marker"></span><span class="text">Lekki gardens horizon 2 extension estate, Ikate Lekki</span></li>
                 <li><a href="+234 702500 4764"><span class="icon fa fa-phone"></span><span class="text">+234 702500 4764</span></a></li>
                 <li><a href="swooshnigeria@gmail.com"><span class="icon fa fa-paper-plane"></span><span class="text">swooshnigeria@gmail.com</span></a></li>
               </ul>
