--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,6 @@
 										<h3 class="mb-4">Contact Us</h3>
 										<div id="form-message-warning" class="mb-4"></div> 
 					      		<div id="form-message-success" class="mb-4">
-					            Your message was sent, thank you!
 					      		</div>
 										<form method="POST" id="contactForm" name="contactForm" class="contactForm">
 											<div class="row">
@@ -150,7 +149,7 @@
 												</div>
 												<div class="col-md-12">
 													<div class="form-group">
-														<input type="submit" value="Send Message" class="btn btn-primary">
+													<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScEwjg5gDK0ACWL5W8X5dWCJwIoCdU4hp78AJVozn-iYfcCsQ/viewform?usp=sf_link" class="btn btn-primary mr-md-4 py-2 px-4">Contact Us<span class="ion-ios-arrow-forward"></span></a></p>
 														<div class="submitting"></div>
 													</div>
 												</div>
@@ -232,12 +231,11 @@
 				<div class="col-md-6 col-lg-3 pl-lg-5 mb-4 mb-md-0">
 					<h2 class="footer-heading">Quick Links</h2>
 					<ul class="list-unstyled">
-		  <li><a href="#" class="py-1 d-block">Home</a></li>
-		  <li><a href="#" class="py-1 d-block">About</a></li>
-		  <li><a href="#" class="py-1 d-block">Services</a></li>
-		  <li><a href="#" class="py-1 d-block">Works</a></li>
-		  <li><a href="#" class="py-1 d-block">Blog</a></li>
-		  <li><a href="#" class="py-1 d-block">Contact</a></li>
+						<li><a href="index.html" class="py-1 d-block">Home</a></li>
+						<li><a href="about.html" class="py-1 d-block">About</a></li>
+						<li><a href="services.html" class="py-1 d-block">Services</a></li>
+						<li><a href="gallery.html" class="py-1 d-block">Gallery</a></li>
+						<li><a href="contact.html" class="py-1 d-block">Contact</a></li>
 		</ul>
 				</div>
 				<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
