--- a/index.html
+++ b/index.html
@@ -481,12 +481,11 @@
 					<div class="col-md-6 col-lg-3 pl-lg-5 mb-4 mb-md-0">
 						<h2 class="footer-heading">Quick Links</h2>
 						<ul class="list-unstyled">
-              <li><a href="#" class="py-1 d-block">Home</a></li>
-              <li><a href="#" class="py-1 d-block">About</a></li>
-              <li><a href="#" class="py-1 d-block">Services</a></li>
-              <li><a href="#" class="py-1 d-block">Works</a></li>
-              <li><a href="#" class="py-1 d-block">Blog</a></li>
-              <li><a href="#" class="py-1 d-block">Contact</a></li>
+              <li><a href="index.html" class="py-1 d-block">Home</a></li>
+              <li><a href="about.html" class="py-1 d-block">About</a></li>
+              <li><a href="services.html" class="py-1 d-block">Services</a></li>
+              <li><a href="gallery.html" class="py-1 d-block">Gallery</a></li>
+              <li><a href="contact.html" class="py-1 d-block">Contact</a></li>
             </ul>
 					</div>
 					<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
