--- a/gallery.html
+++ b/gallery.html
@@ -169,7 +169,7 @@
 					</a>
 			<div class="desc w-100 px-4 text-center pt-5 mt-5">
 			  <div class="text w-100 mb-3 mt-4">
-				  <h2><a href="The View">The View</a></h2>
+				  <h2><a href="The View"></a></h2>
 			  </div>
 		  </div>
 		</div>
